# trackmybets

./: .env.example  .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: cli.py  main.py
backend/app/api/: __init__.py  metrics.py  uploads.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  bet.py  reference.py  schemas.py  upload.py
backend/app/reference/: base_teams.json  loader.py  teams.py
backend/app/services/: ingestion_service.py  metrics_breakdown.py  metrics_service.py  reference_seed.py  timeseries.py  upload_service.py
backend/app/services/parsers/: sportsbet.py
backend/tests/: test_ingestion_read_csv.py  test_sportsbet_parser.py
docs/: architecture.md
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.paths.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/features/dashboard/: BreakdownSection.tsx  CashSummary.tsx  MetricsOverview.tsx  ProfitTimeline.tsx
frontend/src/features/upload/: ExtensionHelper.tsx  UploadPanel.tsx
frontend/src/lib/: api.ts
scripts/: build-extension.sh
shared/: README.md
